--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,19 +2,15 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
 a {
   color: inherit;
-  text-decoration: none;
+  cursor:pointer;
+  text-decoration:underline;
 }
-
 * {
   box-sizing: border-box;
 }
-
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -23,4 +19,11 @@ a {
     color: white;
     background: black;
   }
+}
+@font-face {
+  font-family: "IRANYEKAN";
+  font-style: normal;
+  ascent-override: 99%;
+  src: url("/assets/fonts/iran-yekan/Qs_Iranyekan.ttf");
+  font-display: swap;
 }
